Add RabbitMQRequestReply implementation (#3357)
* Add RabbitMQRequestReply implementation
* Use rabbitmq connection name instead of channel name in metricsName
* Auto set sharedConnectionName in RabbitMQRequestReplyImpl
* Auto propagate correlationId and replyTo from incoming metadata for request-reply
* RabbitMQRequestReply support any exchange type (topic, fanout, x-local-random)
* Add exchange type note to rabbitmq request-reply documentation

---------

Signed-off-by: Crustack <crustackk@gmail.com>
Co-authored-by: Ozan Gunalp <ozangunalp@gmail.com>