@@ -41,6 +41,8 @@ public class RabbitMQClientHelper {
     private static final double CREDENTIALS_PROVIDER_REFRESH_DELAY_RATIO = 0.8;
     private static final Duration CREDENTIALS_PROVIDER_APPROACH_EXPIRE_TIME = ofSeconds(1);
 
+    private static final String DEFAULT_ROUTING_KEY = "#";
+
     private RabbitMQClientHelper() {
         // avoid direct instantiation.
     }
@@ -49,17 +51,16 @@ public class RabbitMQClientHelper {
         Optional<String> clientOptionsName = config.getClientOptionsName();
         Vertx vertx = connector.vertx();
         RabbitMQOptions options;
-        String connectionLabel = config.getSharedConnectionName().orElse(config.getChannel());
         if (clientOptionsName.isPresent()) {
             options = getClientOptionsFromBean(connector.clientOptions(), clientOptionsName.get());
         } else {
             options = getClientOptions(vertx, config, connector.credentialsProviders());
         }
-        if (DEFAULT_METRICS_NAME.equals(options.getMetricsName())) {
-            options.setMetricsName("rabbitmq|" + connectionLabel);
-        }
         if (options.getConnectionName() == null || options.getConnectionName().isEmpty()) {
             options.setConnectionName(resolveConnectionName(config));
+        }
+        if (DEFAULT_METRICS_NAME.equals(options.getMetricsName())) {
+            options.setMetricsName("rabbitmq|" + options.getConnectionName());
         }
         return ConfigUtils.customize(config.config(), connector.configCustomizers(), options);
     }
@@ -71,6 +72,13 @@ public class RabbitMQClientHelper {
             json.put("addresses", addresses.stream().map(Address::toString).collect(Collectors.toList()));
         }
         return sha256(json.encode());
+    }
+
+    public static String resolveConnectionName(RabbitMQConnectorCommonConfiguration config) {
+        return config.getSharedConnectionName()
+                .orElseGet(() -> String.format("%s (%s)",
+                        config.getChannel(),
+                        config instanceof RabbitMQConnectorIncomingConfiguration ? "Incoming" : "Outgoing"));
     }
 
     static RabbitMQOptions getClientOptionsFromBean(Instance<RabbitMQOptions> options, String optionsBeanName) {
@@ -164,13 +172,6 @@ public class RabbitMQClientHelper {
         }
 
         return options;
-    }
-
-    private static String resolveConnectionName(RabbitMQConnectorCommonConfiguration config) {
-        return config.getSharedConnectionName()
-                .orElseGet(() -> String.format("%s (%s)",
-                        config.getChannel(),
-                        config instanceof RabbitMQConnectorIncomingConfiguration ? "Incoming" : "Outgoing"));
     }
 
     private static String sha256(String value) {
@@ -336,8 +337,18 @@ public class RabbitMQClientHelper {
             final RabbitMQConnectorIncomingConfiguration ic) {
         final String exchangeName = getExchangeName(ic);
         final String queueName = getQueueName(ic);
-        final List<String> routingKeys = Arrays.stream(ic.getRoutingKeys().split(","))
-                .map(String::trim).collect(Collectors.toList());
+        final List<String> routingKeys;
+        if (ic.getRoutingKeys().isPresent()) {
+            String routingKeysStr = ic.getRoutingKeys().get();
+            routingKeys = Arrays.stream(routingKeysStr.split(","))
+                    .map(String::trim)
+                    .map(s -> "\"\"".equals(s) ? "" : s)
+                    .toList();
+        } else if ("x-local-random".equals(ic.getExchangeType())) {
+            routingKeys = Collections.singletonList("");
+        } else {
+            routingKeys = Collections.singletonList(DEFAULT_ROUTING_KEY);
+        }
         final Map<String, Object> arguments = parseArguments(ic.getArguments());
 
         // Skip queue bindings if exchange name is default ("")
